--- a/index.html
+++ b/index.html
@@ -11,28 +11,28 @@
         <div class="row">
           <div class="column">
             <div class="row">
-              <video src="assets/0/0.mp4" loop preload="auto"></video>
-              <video src="assets/1/0.mp4" loop preload="auto"></video>
-              <video src="assets/2/0.mp4" loop preload="auto"></video>
-              <video src="assets/3/0.mp4" loop preload="auto"></video>
+              <video src="assets/per_year/0/0.mp4" loop preload="auto"></video>
+              <video src="assets/per_year/1/0.mp4" loop preload="auto"></video>
+              <video src="assets/per_year/2/0.mp4" loop preload="auto"></video>
+              <video src="assets/per_year/3/0.mp4" loop preload="auto"></video>
             </div>
             <div class="row">
-              <video src="assets/0/1.mp4" loop preload="auto"></video>
-              <video src="assets/1/1.mp4" loop preload="auto"></video>
-              <video src="assets/2/1.mp4" loop preload="auto"></video>
-              <video src="assets/3/1.mp4" loop preload="auto"></video>
+              <video src="assets/per_year/0/1.mp4" loop preload="auto"></video>
+              <video src="assets/per_year/1/1.mp4" loop preload="auto"></video>
+              <video src="assets/per_year/2/1.mp4" loop preload="auto"></video>
+              <video src="assets/per_year/3/1.mp4" loop preload="auto"></video>
             </div>
             <div class="row">
-              <video src="assets/0/2.mp4" loop preload="auto"></video>
-              <video src="assets/1/2.mp4" loop preload="auto"></video>
-              <video src="assets/2/2.mp4" loop preload="auto"></video>
-              <video src="assets/3/2.mp4" loop preload="auto"></video>
+              <video src="assets/per_year/0/2.mp4" loop preload="auto"></video>
+              <video src="assets/per_year/1/2.mp4" loop preload="auto"></video>
+              <video src="assets/per_year/2/2.mp4" loop preload="auto"></video>
+              <video src="assets/per_year/3/2.mp4" loop preload="auto"></video>
             </div>
             <div class="row">
-              <video src="assets/0/3.mp4" loop preload="auto"></video>
-              <video src="assets/2/3.mp4" loop preload="auto"></video>
-              <video src="assets/2/3.mp4" loop preload="auto"></video>
-              <video src="assets/3/3.mp4" loop preload="auto"></video>
+              <video src="assets/per_year/0/3.mp4" loop preload="auto"></video>
+              <video src="assets/per_year/2/3.mp4" loop preload="auto"></video>
+              <video src="assets/per_year/2/3.mp4" loop preload="auto"></video>
+              <video src="assets/per_year/3/3.mp4" loop preload="auto"></video>
             </div>
           </div>
           <div class="column">
