--- a/index.html
+++ b/index.html
@@ -11,28 +11,28 @@
         <div class="row">
           <div class="column">
             <div class="row">
-              <video src="assets/per_year/0/0.mp4" loop preload="auto"></video>
-              <video src="assets/per_year/1/0.mp4" loop preload="auto"></video>
-              <video src="assets/per_year/2/0.mp4" loop preload="auto"></video>
-              <video src="assets/per_year/3/0.mp4" loop preload="auto"></video>
+              <video src="assets/s2/13-4230-2708-video.webm" loop preload="auto"></video>
+              <video src="assets/s2/13-4231-2708-video.webm" loop preload="auto"></video>
+              <video src="assets/s2/13-4232-2708-video.webm" loop preload="auto"></video>
+              <video src="assets/s2/13-4233-2708-video.webm" loop preload="auto"></video>
             </div>
             <div class="row">
-              <video src="assets/per_year/0/1.mp4" loop preload="auto"></video>
-              <video src="assets/per_year/1/1.mp4" loop preload="auto"></video>
-              <video src="assets/per_year/2/1.mp4" loop preload="auto"></video>
-              <video src="assets/per_year/3/1.mp4" loop preload="auto"></video>
+              <video src="assets/s2/13-4230-2709-video.webm" loop preload="auto"></video>
+              <video src="assets/s2/13-4231-2709-video.webm" loop preload="auto"></video>
+              <video src="assets/s2/13-4232-2709-video.webm" loop preload="auto"></video>
+              <video src="assets/s2/13-4233-2709-video.webm" loop preload="auto"></video>
             </div>
             <div class="row">
-              <video src="assets/per_year/0/2.mp4" loop preload="auto"></video>
-              <video src="assets/per_year/1/2.mp4" loop preload="auto"></video>
-              <video src="assets/per_year/2/2.mp4" loop preload="auto"></video>
-              <video src="assets/per_year/3/2.mp4" loop preload="auto"></video>
+              <video src="assets/s2/13-4230-2710-video.webm" loop preload="auto"></video>
+              <video src="assets/s2/13-4231-2710-video.webm" loop preload="auto"></video>
+              <video src="assets/s2/13-4232-2710-video.webm" loop preload="auto"></video>
+              <video src="assets/s2/13-4233-2710-video.webm" loop preload="auto"></video>
             </div>
             <div class="row">
-              <video src="assets/per_year/0/3.mp4" loop preload="auto"></video>
-              <video src="assets/per_year/2/3.mp4" loop preload="auto"></video>
-              <video src="assets/per_year/2/3.mp4" loop preload="auto"></video>
-              <video src="assets/per_year/3/3.mp4" loop preload="auto"></video>
+              <video src="assets/s2/13-4230-2711-video.webm" loop preload="auto"></video>
+              <video src="assets/s2/13-4231-2711-video.webm" loop preload="auto"></video>
+              <video src="assets/s2/13-4232-2711-video.webm" loop preload="auto"></video>
+              <video src="assets/s2/13-4233-2711-video.webm" loop preload="auto"></video>
             </div>
           </div>
           <div class="column">
@@ -40,66 +40,31 @@
               <!-- speed -->
               <div>Speed</div>
               <div class="row">
-                <input
-                  id="speed-slider"
-                  title="slider"
-                  type="range"
-                  min="0"
-                  max="1"
-                  step="0.1"
-                  value="0.5"
-                />
+                <input id="speed-slider" title="slider" type="range" min="0" max="5" step="0.1" value="1" />
                 <p id="speed-value">0.5x</p>
               </div>
 
               <!-- maximum allowed delay between video's before they are out-of-sync -->
               <div>Maximum drift</div>
               <div class="row">
-                <input
-                  id="max-drift-slider"
-                  title="max drift"
-                  type="range"
-                  min="0"
-                  max="0.25"
-                  step="0.005"
-                  value="0.05"
-                />
+                <input id="max-drift-slider" title="max drift" type="range" min="0" max="0.25" step="0.005" value="0.05" />
                 <p id="max-drift-value">0.05 sec</p>
               </div>
 
               <div>Frame</div>
               <div class="row">
-                <input
-                  id="frame-slider"
-                  title="Current time"
-                  type="range"
-                  min="1"
-                  max="25"
-                  step="1"
-                  value="1"
-                />
+                <input id="frame-slider" title="Current time" type="range" min="1" max="44" step="1" value="1" />
                 <p id="frame-value">0</p>
               </div>
 
               <div class="row">
                 <div class="column">
                   <div>Debug</div>
-                  <input
-                    type="checkbox"
-                    id="debug-checkbox"
-                    title="debug"
-                    name="debug"
-                  />
+                  <input type="checkbox" id="debug-checkbox" title="debug" name="debug" />
                 </div>
                 <div class="column">
                   <div>Play</div>
-                  <input
-                    type="checkbox"
-                    id="play-checkbox"
-                    title="play"
-                    name="play"
-                    checked
-                  />
+                  <input type="checkbox" id="play-checkbox" title="play" name="play" checked />
                 </div>
               </div>
             </div>
