Separate debugging code and put into module

--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
             </div>
           </div>
         </div>
+        <div class="row">
+          <div id="echart"></div>
+        </div>
       </div>
     </div>
 
